--- a/2 CUATRI/TBA/P1/GraphMatching.ipynb
+++ b/2 CUATRI/TBA/P1/GraphMatching.ipynb
@@ -50,16 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,41 +59,63 @@
     "import scipy.io as sio\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.spatial import Delaunay \n",
-    "from scipy.optimize import linear_sum_assignment\n",
-    "\n",
+    "from scipy.optimize import linear_sum_assignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def load_and_preprocess_images(img_path1, img_path2, mat_path1, mat_path2):\n",
-    "    \"\"\"\n",
-    "    Carga y preprocesa pares de imágenes y sus keypoints\n",
-    "    \"\"\"\n",
-    "    return img1, img2, kpts1, kpts2\n",
+    "     \n",
+    "    img1 = Image.open(img_path1) \n",
+    "    img2 = Image.open(img_path2) \n",
+    "\n",
+    "    kpts1 = np.array(sio.loadmat(mat_path1)[\"pts_coord\"])\n",
+    "    kpts2 = np.array(sio.loadmat(mat_path2)[\"pts_coord\"])\n",
+    "\n",
+    "    return img1, img2, kpts1, kpts2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def delaunay_triangulation(kpt):\n",
-    "    \"\"\"\n",
-    "    Generate adjacency matrix based on Delaunay triangulation\n",
-    "    \"\"\"\n",
-    "    return A\n",
     "\n",
-    "def simple_spatial_matching(kpts1, kpts2):\n",
-    "    \"\"\"\n",
-    "    Realiza matching entre puntos usando distancia euclidiana y algoritmo húngaro optimizado\n",
+    "    kpt = kpt.T\n",
+    "    tri = Delaunay(kpt)\n",
+    "\n",
+    "    n = len(kpt)\n",
+    "    A = np.zeros((n, n), dtype=int)\n",
     "    \n",
-    "    Args:\n",
-    "        kpts1: Array de keypoints del primer grafo (2xN)\n",
-    "        kpts2: Array de keypoints del segundo grafo (2xN)\n",
+    "    for simplex in tri.simplices:\n",
+    "        for i in range(3):\n",
+    "            for j in range(i + 1, 3):\n",
+    "                p1, p2 = simplex[i], simplex[j]\n",
+    "                A[p1, p2] = A[p2, p1] = 1\n",
     "    \n",
-    "    Returns:\n",
-    "        matching: Matriz binaria donde matching[i,j]=1 indica correspondencia entre puntos\n",
-    "    Hints:\n",
-    "        - Primero deberás crear una matriz de costes basada en distancias euclidianas,\n",
-    "        cuyo tamaño será (n1, n2) donde n1 y n2 son el número de keypoints en cada grafo.\n",
-    "        - Seguidamente, deberás rellenar dicha matriz con las distancias euclidianas entre\n",
-    "        los keypoints de ambos grafos.\n",
-    "        - A continuación, deberás aplicar el algoritmo húngaro usando la función linear_sum_assignment, que recibe la matriz de costes y devuelve los índices de los puntos emparejados.\n",
-    "        - Finalmente, deberás crear una matriz de matching a partir de los índices obtenidos.\n",
-    "\n",
-    "    \"\"\"\n",
-    "    return matching\n",
-    "\n",
+    "    return A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def visualize_matching_full(img1, img2, kpts1, kpts2, adj_matrix1, adj_matrix2, matching):\n",
     "    \"\"\"\n",
     "    Visualiza el matching completo entre dos grafos\n",
@@ -110,8 +123,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Algoritmo Húngaro"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -174,19 +194,36 @@
     "        for j in range(num_cols):\n",
     "            if marked_zeros[i, j]:\n",
     "                assignment[i, j] = 1\n",
+    " \n",
+    "    return assignment\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simple_spatial_matching(kpts1, kpts2):\n",
+    "    \"\"\"\n",
+    "    Realiza matching entre puntos usando distancia euclidiana y algoritmo húngaro optimizado\n",
+    "    \n",
+    "    Args:\n",
+    "        kpts1: Array de keypoints del primer grafo (2xN)\n",
+    "        kpts2: Array de keypoints del segundo grafo (2xN)\n",
+    "    \n",
+    "    Returns:\n",
+    "        matching: Matriz binaria donde matching[i,j]=1 indica correspondencia entre puntos\n",
+    "    Hints:\n",
+    "        - Primero deberás crear una matriz de costes basada en distancias euclidianas,\n",
+    "        cuyo tamaño será (n1, n2) donde n1 y n2 son el número de keypoints en cada grafo.\n",
+    "        - Seguidamente, deberás rellenar dicha matriz con las distancias euclidianas entre\n",
+    "        los keypoints de ambos grafos.\n",
+    "        - A continuación, deberás aplicar el algoritmo húngaro usando la función linear_sum_assignment, que recibe la matriz de costes y devuelve los índices de los puntos emparejados.\n",
+    "        - Finalmente, deberás crear una matriz de matching a partir de los índices obtenidos.\n",
     "\n",
-    "    return assignment\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Ejemplo de uso\n",
-    "    cost_matrix = np.array([\n",
-    "        [4, 2, 8],\n",
-    "        [4, 3, 7],\n",
-    "        [6, 4, 7]\n",
-    "    ])\n",
-    "\n",
-    "    optimal_assignment = HungarianAlgorithm(cost_matrix)\n",
-    "    print(\"Asignación óptima:\\n\", optimal_assignment)\n"
+    "    \"\"\"\n",
+    "    return matching"
    ]
   },
   {
